@@ -1,5 +1,6 @@
 package com.blogapp.blog.application.service.impl;
 
+import com.blogapp.blog.application.dto.PageDto;
 import com.blogapp.blog.application.dto.PostDto;
 import com.blogapp.blog.application.entity.Category;
 import com.blogapp.blog.application.entity.Post;
@@ -8,16 +9,19 @@ import com.blogapp.blog.application.repo.CategoryRepo;
 import com.blogapp.blog.application.repo.PostRepo;
 import com.blogapp.blog.application.repo.UserRepo;
 import com.blogapp.blog.application.service.PostService;
+import com.blogapp.blog.application.utilitys.Pages;
 import exception.ResourceNotFound;
 import org.modelmapper.ModelMapper;
+import org.springframework.data.domain.Page;
 import org.springframework.stereotype.Service;
 
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
-public record PostServiceImpl(ModelMapper modelMapper, PostRepo postRepo, UserRepo userRepo,
+public record PostServiceImpl(ModelMapper modelMapper,
+                              PostRepo postRepo,
+                              UserRepo userRepo,
                               CategoryRepo categoryRepo) implements PostService {
     @Override
     public PostDto createPost(PostDto postDto, Long userId, Long categoryId) {
@@ -43,6 +47,7 @@ public record PostServiceImpl(ModelMapper modelMapper, PostRepo postRepo, UserRe
                         new ResourceNotFound("post", "id", postId));
         post.setTitle(postDto.getTitle());
         post.setContent(postDto.getContent());
+        post.setImageName(postDto.getImageName());
         post.setDate(new Date());
         post = postRepo.save(post);
         return modelMapper.map(post, PostDto.class);
@@ -65,18 +70,27 @@ public record PostServiceImpl(ModelMapper modelMapper, PostRepo postRepo, UserRe
     }
 
     @Override
-    public List<PostDto> getAllPost() {
-        List<Post> posts = this.postRepo.findAll();
-        return posts.stream().map(this::entityToDto).collect(Collectors.toList());
+    public PageDto getAllPost(Integer pageNumber, Integer pageSize, String sortBy) {
+        Page<Post> pagePosts = this.postRepo.findAll(Pages.getPageable(pageNumber, pageSize, sortBy));
+        List<Post> allPost = pagePosts.getContent();
+        List<PostDto> postDto = allPost.stream().map(this::entityToDto).toList();
+
+        PageDto pageDto = new PageDto();
+        pageDto.setContent(postDto);
+        pageDto.setPageNumber(pagePosts.getNumber());
+        pageDto.setPageSize(pagePosts.getSize());
+        pageDto.setTotalElements((int) pagePosts.getTotalElements());
+        pageDto.setTotalPages(pagePosts.getTotalPages());
+        pageDto.setLastPage(false);
+
+        return pageDto;
     }
 
     @Override
     public List<PostDto> getAllPostByUser(Long user_id) {
-        User user = this.userRepo.findById(user_id).
-                orElseThrow(() ->
-                        new ResourceNotFound("user", "user_id", user_id));
+        User user = this.userRepo.findById(user_id).orElseThrow(() -> new ResourceNotFound("user", "user_id", user_id));
         List<Post> posts = postRepo.findByUser(user);
-        return posts.stream().map(this::entityToDto).collect(Collectors.toList());
+        return posts.stream().map(this::entityToDto).toList();
     }
 
     @Override
@@ -85,7 +99,7 @@ public record PostServiceImpl(ModelMapper modelMapper, PostRepo postRepo, UserRe
                 orElseThrow(() ->
                         new ResourceNotFound("category", "categoryId", categoryId));
         List<Post> posts = postRepo.findByCategory(category);
-        return posts.stream().map(this::entityToDto).collect(Collectors.toList());
+        return posts.stream().map(this::entityToDto).toList();
     }
 
     private Post dtoToEntity(PostDto postDto) {
